<resources>
    <string name="app_name">PersonalMovieDb</string>
    <string name="databaseName">pmdb_database</string>

    <string name="toggleButton">Toggle</string>
    <string name="textfield">Text Field</string>
    <string name="secondActivityButton">Second Activity</string>

    <string name="titleLabel">Title</string>
    <string name="descriptionLabel">Description</string>
    <string name="imageLabel">Image</string>
    <string name="addButton">Add</string>
    <string name="changeActivity">Change Activity</string>
    <string name="thirdActivityButton">Third Activity</string>
    <string name="sortLabel">Sort Alphabetically</string>
    <string name="filterByFirstLetter">Filter by first letter</string>
    <string name="sortedLabelAsc">Asc</string>
    <string name="sortedLabelDesc">Desc</string>
    <string name="lab1ButtonText">L1</string>
    <string name="lab2ButtonText">L2</string>
    <string name="sendRequestButton">Send Request</string>
    <string name="searchLabel">Search</string>
    <string name="defenseTaskButtonText">"Remove"</string>

    <string name="videos">Videos</string>
    <string name="userList">Lists</string>
    <string name="genresString">Genres:</string>
    <string name="directorsString">Directed by:</string>
    <string name="writersString">Written by:</string>
    <string name="actorsString">Main cast:</string>
    <string name="descriptionString">Description:</string>

    <string name="newUserListString">Create new list</string>
    <string name="newUserList_titleHint">Title</string>
    <string name="newUserList_saveButton">Save</string>

    <string name="userlistoptions_remove">Remove</string>

    <string name="accountInformation_connecting">Connecting to google services...</string>
    <string name="accountInformation_failedToConnect">Failed to connect to google services.</string>
    <string name="accountInformation_reasonToConnect">In order to sync your data with the cloud you need to login to your google account</string>
    <string name="retryLoginButtonText">Retry</string>
    <string name="doNotConnectButtonText">Don\'t connect</string>
    <string name="loginButtonText">Login</string>
    <string name="logoutButtonText">Logout</string>

    <string name="upcomingMoviesText">Top Upcoming</string>
    <string name="popularMoviesText">Popular</string>
</resources>
